# CallNativeViaFlutterView

./: README.md
UseFlutterView/: build.gradle  settings.gradle
UseFlutterView/app/: build.gradle
UseFlutterView/app/src/androidTest/java/com/xx/useflutterview/: ExampleInstrumentedTest.kt
UseFlutterView/app/src/main/: AndroidManifest.xml
UseFlutterView/app/src/main/java/com/xx/useflutterview/: MainActivity.kt
UseFlutterView/app/src/main/res/layout/: activity_main.xml
UseFlutterView/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
UseFlutterView/app/src/main/res/values-night/: themes.xml
UseFlutterView/app/src/test/java/com/xx/useflutterview/: ExampleUnitTest.kt
UseFlutterView/gradle/wrapper/: gradle-wrapper.properties
my_flutter_plugin_ffi/: .metadata  README.md  ffigen.yaml  pubspec.yaml
my_flutter_plugin_ffi/android/: build.gradle  settings.gradle
my_flutter_plugin_ffi/android/src/main/: AndroidManifest.xml
my_flutter_plugin_ffi/lib/: my_flutter_plugin_ffi.dart  my_flutter_plugin_ffi_bindings_generated.dart
my_flutter_plugin_ffi/src/: CMakeLists.txt  my_flutter_plugin_ffi.c  my_flutter_plugin_ffi.h
my_fluttermod/: README.md  pubspec.yaml
my_fluttermod/lib/: main.dart
my_fluttermod/test/: widget_test.dart
